--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-          OpenTIS
+          <%= image_tag("heart-blue.png") %> OpenTIS
         </a>
       </div>
     </div>
