--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
 <body>
 
 <%= render  'layouts/header'%>
-<div class="container">
-	<%= yield %>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+	  <%= yield %>
+  </div>
 </div>
 
 </body>
