--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -13,17 +13,14 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class:"form-control", placeholder: "Title" %>
   </div>
+
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.text_field :status %>
+    <%= f.text_area :description, class:"form-control", placeholder: "Incident description"%></div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create new incident", class:"btn btn-default btn-lg" %>
   </div>
-<% end %>
+<% end %>  
