--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -1,26 +1,32 @@
-<%= form_for(@incident) do |f| %>
-  <% if @incident.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@incident.errors.count, "error") %> prohibited this incident from being saved:</h2>
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  <h4 class="modal-title" id="myModalLabel">Create new incident</h4>
+</div>
+<div class="modal-body">
+  <%= form_for(@incident) do |f| %>
+      <% if @incident.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@incident.errors.count, "error") %> prohibited this incident from being saved:</h2>
 
-      <ul>
-      <% @incident.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+            <ul>
+              <% @incident.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
       <% end %>
-      </ul>
-    </div>
+
+      <div class="form-group">
+        <%= f.label :title %><br>
+        <%= f.text_field :title, class:"form-control", placeholder: "Title" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :description %><br>
+        <%= f.text_area :description, class:"form-control", rows:"5", style:" resize: none;", placeholder: "Incident description"%>
+      </div>
+</div>
+<div class="modal-footer">
+  <%= f.submit "Create", class:"btn btn-primary" %>
+</div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title, class:"form-control", placeholder: "Title" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description, class:"form-control", placeholder: "Incident description"%></div>
-  </div>
-  <div class="actions">
-    <%= f.submit "Create new incident", class:"btn btn-default btn-lg" %>
-  </div>
-<% end %>  
