--- a/app/views/incidents/_form_for_events.html.erb
+++ b/app/views/incidents/_form_for_events.html.erb
@@ -1,14 +1,22 @@
-<h2>Add an event:</h2>
-<%= form_for([@incident, @incident.events.build]) do |f| %>
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </p>
-  <p>
-    <%= f.label :status %><br>
-    <%= f.text_area :status %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  <h4 class="modal-title" id="myModalLabel">Create new incident</h4>
+</div>
+<div class="modal-body">
+  <%= form_for([@incident, @incident.events.build]) do |f| %>
+    
+      <div class="form-group">
+        <%= f.label :description %><br>
+        <%= f.text_area :description, class:"form-control", rows:"5", style:" resize: none;", placeholder: "Incident description"%>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :status %><br>
+        <%= f.select :status, [['Open', 'open'], ['Closed', 'closed']], {} , { class:"form-control" }%>
+      </div>
+
+</div>
+<div class="modal-footer">
+  <%= f.submit "Add new incident", class:"btn btn-primary" %>
+</div>
+  <% end %>
