add more links to event and controllers

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -60,11 +60,11 @@
   <tr>
     <th>Status</th>
     <th>Date</th>    
-      <th>Action</th>
+      <th>Description</th>
   </tr>
   </thead>
  
- <% @incident.events.each do |event| %>
+ <%  @events.each do |event| %>
   
   <tbody> 
     <tr>
