--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 <body>
 
 <%= render  'layouts/header'%>
+<%= render  'layouts/status'%>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
 	  <%= yield %>
