--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,3 +30,47 @@
     -webkit-border-radius:7.5px;
     -moz-border-radius:7.5px;
 }
+
+.component-square-first {
+    width: 13%;
+    position: relative;
+}
+
+.component-square-offset {
+    width: 13%;
+    margin-left: 1%;
+    position: relative;
+}
+
+.component-square-first:after {
+    display: block;
+    padding-bottom: 100%;
+    content: "";
+}
+
+.component-square-offset:after {
+    display: block;
+    padding-bottom: 100%;
+    content: "";
+}
+
+.component-content {
+    width: 100%;
+    height: 100%;
+    background-color: yellowgreen;
+    position: absolute;
+}
+
+.component-content-title {
+    height: 10%;
+    background-color: green;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+}
+
+.component-content-body {
+    height: 80%;
+}
+
+
