--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,3 +1,64 @@
+
+<div class="row" style="margin-top: 20px">
+  <div class="col-md-10 col-md-offset-1" style="display:-webkit-inline-box">
+
+    <div class="component-square-first">
+      <div class="component-content">
+        <div class="component-content-title">
+          header
+        </div>
+        <div class="component-content-body">
+          <canvas id="myChart" width="50%" height="50%"></canvas>
+        </div>
+        <div class="component-content-title">
+          footer
+        </div>
+      </div>
+    </div>
+    <div class="component-square-offset">
+      <div class="component-content">
+        toto
+      </div>
+    </div>
+    <div class="component-square-offset">
+      <div class="component-content">
+        toto
+      </div>
+    </div>
+    <div class="component-square-offset">
+      <div class="component-content">
+        toto
+      </div>
+    </div>
+    <div class="component-square-offset">
+      <div class="component-content">
+        toto
+      </div>
+    </div>
+    <div class="component-square-offset">
+      <div class="component-content">
+        toto
+      </div>
+    </div>
+    <div class="component-square-offset">
+      <div class="component-content">
+        toto
+      </div>
+    </div>
+
+
+
+  </div>
+</div>
+
+
+
+
+
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Incidents</h1>
@@ -44,3 +105,44 @@
     </div>
   </div>
 </div>
+
+    </div>
+  </div>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
+
+<script>
+  var ctx = document.getElementById("myChart");
+  var myChart = new Chart(ctx, {
+    type: 'doughnut',
+    data: {
+      labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        backgroundColor: [
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(54, 162, 235, 0.2)',
+          'rgba(255, 206, 86, 0.2)',
+          'rgba(75, 192, 192, 0.2)',
+          'rgba(153, 102, 255, 0.2)',
+          'rgba(255, 159, 64, 0.2)'
+        ],
+        borderColor: [
+          'rgba(255,99,132,1)',
+          'rgba(54, 162, 235, 1)',
+          'rgba(255, 206, 86, 1)',
+          'rgba(75, 192, 192, 1)',
+          'rgba(153, 102, 255, 1)',
+          'rgba(255, 159, 64, 1)'
+        ],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      legend:{
+        display: false
+      }
+    }
+  });
+</script>
