--- a/app/views/incidents/_component_status.html.erb
+++ b/app/views/incidents/_component_status.html.erb
@@ -1,4 +1,5 @@
-  <div class="row" style="margin-top: 20px">
+
+<div class="row" style="margin-top: 20px">
   <div class="col-md-10 col-md-offset-1" style="display:-webkit-inline-box">
 
     <div class="component-square-first">
@@ -7,7 +8,7 @@
           header
         </div>
         <div class="component-content-body">
-          <canvas id="myChart" width="50%" height="50%"></canvas>
+          <canvas id="myChart" width="100%" height="100%"></canvas>
         </div>
         <div class="component-content-title">
           footer
@@ -46,3 +47,41 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
+
+<script>
+  var ctx = document.getElementById("myChart");
+  var myChart = new Chart(ctx, {
+    type: 'doughnut',
+    data: {
+      labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        backgroundColor: [
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(54, 162, 235, 0.2)',
+          'rgba(255, 206, 86, 0.2)',
+          'rgba(75, 192, 192, 0.2)',
+          'rgba(153, 102, 255, 0.2)',
+          'rgba(255, 159, 64, 0.2)'
+        ],
+        borderColor: [
+          'rgba(255,99,132,1)',
+          'rgba(54, 162, 235, 1)',
+          'rgba(255, 206, 86, 1)',
+          'rgba(75, 192, 192, 1)',
+          'rgba(153, 102, 255, 1)',
+          'rgba(255, 159, 64, 1)'
+        ],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      legend:{
+        display: false
+      }
+    }
+  });
+</script>
