--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -25,8 +25,15 @@
         <%= f.label :description %><br>
         <%= f.text_area :description, class:"form-control", rows:"5", style:" resize: none;", placeholder: "Incident description"%>
       </div>
+
+      <% @components.each do |c| %>
+      <div class="form-group">
+        <%= label_tag :checkbox, c.name %>    
+        <%= check_box_tag "components_ids[#{c.id}]", c.status %>
+      </div>
+      <% end %>
 </div>
 <div class="modal-footer">
   <%= f.submit "Create", class:"btn btn-primary" %>
 </div>
-  <% end %>
+<% end %>
