changing status color fucntion to component statuses

--- a/app/views/layouts/_status.html.erb
+++ b/app/views/layouts/_status.html.erb
@@ -1,8 +1,3 @@
-<% component_status = "ok" %>
-
-<% if component_status == "ok" ? status = "status-ok" : status = "status-ko"  %> 
-
-<div class="status <%= status %>">
+<div class="status <%= @component_status  %>">
 </div>
 
-<% end %>
