--- a/app/views/components/_form.html.erb
+++ b/app/views/components/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :status %><br>
-    <%= f.text_field :status %>
+    <%= f.label :available %><br>
+    <%= f.text_field :available %>
   </div>
   <div class="actions">
     <%= f.submit %>
