--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Status:</strong>
-  <%= @component.status %>
+  <strong>available:</strong>
+  <%= @component.available %>
 </p>
 
 <%= link_to 'Edit', edit_component_path(@component) %> |
